@@ -20,7 +20,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.1.7.Final-SNAPSHOT</version>
+    <version>4.1.10.Final-SNAPSHOT</version>
   </parent>
 
   <artifactId>netty-testsuite</artifactId>
@@ -75,21 +75,6 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.easymock</groupId>
-      <artifactId>easymock</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.easymock</groupId>
-      <artifactId>easymockclassextension</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jmock</groupId>
-      <artifactId>jmock-junit4</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <scope>compile</scope>
@@ -102,22 +87,9 @@
   </dependencies>
 
   <properties>
-    <skipAutobahnTestsuite>false</skipAutobahnTestsuite>
+    <!-- Needed for SSL tests as these use the SelfSignedCertificate --> 
+    <argLine.java9.extras>--add-exports java.base/sun.security.x509=ALL-UNNAMED</argLine.java9.extras>
   </properties>
-
-  <profiles>
-    <profile>
-      <id>skipTests</id>
-      <activation>
-        <property>
-          <name>skipTests</name>
-        </property>
-      </activation>
-      <properties>
-        <skipAutobahnTestsuite>true</skipAutobahnTestsuite>
-      </properties>
-    </profile>
-  </profiles>
 
   <build>
     <plugins>
@@ -127,28 +99,6 @@
           <testSourceDirectory>${project.build.sourceDirectory}</testSourceDirectory>
           <testClassesDirectory>${project.build.outputDirectory}</testClassesDirectory>
         </configuration>
-      </plugin>
-      <plugin>
-        <groupId>me.normanmaurer.maven.autobahntestsuite</groupId>
-        <artifactId>autobahntestsuite-maven-plugin</artifactId>
-        <version>0.1.3</version>
-        <configuration>
-          <mainClass>io.netty.testsuite.websockets.autobahn.AutobahnServer</mainClass>
-          <cases>
-            <case>*</case>
-          </cases>
-          <excludeCases />
-          <failOnNonStrict>false</failOnNonStrict>
-          <skip>${skipAutobahnTestsuite}</skip>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>test</phase>
-            <goals>
-              <goal>fuzzingclient</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
   </build>
